# AITK-545-fast-answers-testing-on-historical-data

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  queries_testing.py  requirements.txt
data/: all_sys_queries_231128.csv  config.json  exp_sup_queries.csv  exp_sup_queries41week.csv  exp_supp_queries_sys1_231115.csv  mouse_validate.csv
results/: aitk545_queries_testing.csv
src/: classifiers.py  config.py  data_types.py  start.py  storage.py
